--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "dev":"nodemon --inspect app.js",
+    "start": "node app.js"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -24,5 +25,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "stripe": "^6.12.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
